--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "tsc --noEmit"
   },
   "dependencies": {
+    "lucide-react": "^0.564.0",
     "nostr-tools": "^2.23.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
