--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.1.18",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.24",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
     "typescript": "~5.6.2",
     "vite": "^7.3.1"
   }
